--- a/archives/toutiao-search/2023-10-19.md
+++ b/archives/toutiao-search/2023-10-19.md
@@ -1,47 +1,71 @@
 # 2023-10-19
 
-共 324 条
+共 342 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 19 2023 22:00:52 GMT+0800 (China Standard Time) -->
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+<!-- 最后更新时间 Thu Oct 19 2023 23:00:55 GMT+0800 (China Standard Time) -->
 1. [刘芳菲发文回应从央视离职](https://so.toutiao.com/search?keyword=刘芳菲发文回应从央视离职)
+1. [三任辽宁公安厅厅长受贿都超亿元](https://so.toutiao.com/search?keyword=三任辽宁公安厅厅长受贿都超亿元)
 1. [践行大食物观 端稳中国饭碗](https://so.toutiao.com/search?keyword=践行大食物观+端稳中国饭碗)
-1. [辽宁公安厅原厅长王大伟贪5.55亿受审](https://so.toutiao.com/search?keyword=辽宁公安厅原厅长王大伟贪5.55亿受审)
+1. [82岁老人翻护栏被撞飞身亡](https://so.toutiao.com/search?keyword=82岁老人翻护栏被撞飞身亡)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
+1. [巴以冲突已致双方超5200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超5200人死亡)
+1. [一带一路峰会各国领导人的休息时间](https://so.toutiao.com/search?keyword=一带一路峰会各国领导人的休息时间)
+1. [白内障宝宝看清妈妈后反应让人心疼](https://so.toutiao.com/search?keyword=白内障宝宝看清妈妈后反应让人心疼)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [网友喊话智利总统：车厘子便宜点](https://so.toutiao.com/search?keyword=网友喊话智利总统：车厘子便宜点)
+1. [北京等地拟取消教师编制？官方辟谣](https://so.toutiao.com/search?keyword=北京等地拟取消教师编制？官方辟谣)
+1. [媒体：加沙医院遭袭重创拜登中东行](https://so.toutiao.com/search?keyword=媒体：加沙医院遭袭重创拜登中东行)
+1. [水均益女儿水亦诗从央视离职](https://so.toutiao.com/search?keyword=水均益女儿水亦诗从央视离职)
+1. [女子遛狗不牵绳：不咬人凭什么拴](https://so.toutiao.com/search?keyword=女子遛狗不牵绳：不咬人凭什么拴)
+1. [约旦：没人信以涉加沙医院遭袭说辞](https://so.toutiao.com/search?keyword=约旦：没人信以涉加沙医院遭袭说辞)
+1. [萧敬腾晒婚纱照官宣结婚](https://so.toutiao.com/search?keyword=萧敬腾晒婚纱照官宣结婚)
+1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
+1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
+1. [专家谈以色列是否具备地面打击能力](https://so.toutiao.com/search?keyword=专家谈以色列是否具备地面打击能力)
+1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
+1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
+1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
+1. [多方回应代驾出车祸医疗费谁出](https://so.toutiao.com/search?keyword=多方回应代驾出车祸医疗费谁出)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+1. [以色列总理会见英国首相苏纳克](https://so.toutiao.com/search?keyword=以色列总理会见英国首相苏纳克)
+1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
+1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
+1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
+1. [台媒：“一带一路”悄悄改变了地球](https://so.toutiao.com/search?keyword=台媒：“一带一路”悄悄改变了地球)
+1. [泰国总理赛塔：尽全力照顾中国游客](https://so.toutiao.com/search?keyword=泰国总理赛塔：尽全力照顾中国游客)
+1. [北京正处于肺炎支原体感染高发时段](https://so.toutiao.com/search?keyword=北京正处于肺炎支原体感染高发时段)
+1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
+1. [比亚迪宣布正式进入匈牙利](https://so.toutiao.com/search?keyword=比亚迪宣布正式进入匈牙利)
+1. [辽宁公安厅原厅长王大伟贪5.55亿受审](https://so.toutiao.com/search?keyword=辽宁公安厅原厅长王大伟贪5.55亿受审)
+1. [以军在约旦河西岸打死4巴勒斯坦人](https://so.toutiao.com/search?keyword=以军在约旦河西岸打死4巴勒斯坦人)
+1. [中国选手再回应马拉松冲刺时被车挡](https://so.toutiao.com/search?keyword=中国选手再回应马拉松冲刺时被车挡)
+1. [美国称俄已“战败”？普京：真好笑](https://so.toutiao.com/search?keyword=美国称俄已“战败”？普京：真好笑)
+1. [哈马斯称目前未有任何援助进入加沙](https://so.toutiao.com/search?keyword=哈马斯称目前未有任何援助进入加沙)
+1. [14岁男孩凌晨口渴误喝百草枯](https://so.toutiao.com/search?keyword=14岁男孩凌晨口渴误喝百草枯)
+1. [LOL-S13：WBG轻松战胜NRG](https://so.toutiao.com/search?keyword=LOL-S13：WBG轻松战胜NRG)
+1. [哪吒汽车CEO：公司账上有100多亿元](https://so.toutiao.com/search?keyword=哪吒汽车CEO：公司账上有100多亿元)
+1. [被双向奔赴的师生情感动到了](https://so.toutiao.com/search?keyword=被双向奔赴的师生情感动到了)
+1. [妻子一句去死男子生吞10cm螺丝刀杆](https://so.toutiao.com/search?keyword=妻子一句去死男子生吞10cm螺丝刀杆)
+1. [胡锡进新增亏损7306元](https://so.toutiao.com/search?keyword=胡锡进新增亏损7306元)
+1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
+1. [36岁生物学家儿时常考倒数第一](https://so.toutiao.com/search?keyword=36岁生物学家儿时常考倒数第一)
+1. [LOL-S13：JDG战胜BDS拿到首胜](https://so.toutiao.com/search?keyword=LOL-S13：JDG战胜BDS拿到首胜)
+1. [华为切入支付市场有何目的](https://so.toutiao.com/search?keyword=华为切入支付市场有何目的)
 1. [黎真主党发破坏以军监控设备的视频](https://so.toutiao.com/search?keyword=黎真主党发破坏以军监控设备的视频)
 1. [美军在中东地区集结军力“秀肌肉”](https://so.toutiao.com/search?keyword=美军在中东地区集结军力“秀肌肉”)
-1. [白内障宝宝看清妈妈后反应让人心疼](https://so.toutiao.com/search?keyword=白内障宝宝看清妈妈后反应让人心疼)
 1. [街道辟谣四川被咬女童先动手砸狗](https://so.toutiao.com/search?keyword=街道辟谣四川被咬女童先动手砸狗)
-1. [82岁老人翻护栏被撞飞身亡](https://so.toutiao.com/search?keyword=82岁老人翻护栏被撞飞身亡)
-1. [媒体：加沙医院遭袭重创拜登中东行](https://so.toutiao.com/search?keyword=媒体：加沙医院遭袭重创拜登中东行)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
-1. [女子遛狗不牵绳：不咬人凭什么拴](https://so.toutiao.com/search?keyword=女子遛狗不牵绳：不咬人凭什么拴)
 1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
 1. [哈马斯向以色列阿什凯隆发射火箭弹](https://so.toutiao.com/search?keyword=哈马斯向以色列阿什凯隆发射火箭弹)
-1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
-1. [萧敬腾晒婚纱照官宣结婚](https://so.toutiao.com/search?keyword=萧敬腾晒婚纱照官宣结婚)
-1. [网友喊话智利总统：车厘子便宜点](https://so.toutiao.com/search?keyword=网友喊话智利总统：车厘子便宜点)
-1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
-1. [北京正处于肺炎支原体感染高发时段](https://so.toutiao.com/search?keyword=北京正处于肺炎支原体感染高发时段)
-1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
-1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
-1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
 1. [广州交警：宝马出租相撞未开斗气车](https://so.toutiao.com/search?keyword=广州交警：宝马出租相撞未开斗气车)
-1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
 1. [向太发文祝福萧敬腾结婚](https://so.toutiao.com/search?keyword=向太发文祝福萧敬腾结婚)
-1. [美国称俄已“战败”？普京：真好笑](https://so.toutiao.com/search?keyword=美国称俄已“战败”？普京：真好笑)
-1. [水均益女儿水亦诗从央视离职](https://so.toutiao.com/search?keyword=水均益女儿水亦诗从央视离职)
-1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
 1. [英首相称“英国与以色列站在一起”](https://so.toutiao.com/search?keyword=英首相称“英国与以色列站在一起”)
-1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
-1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
-1. [中国选手再回应马拉松冲刺时被车挡](https://so.toutiao.com/search?keyword=中国选手再回应马拉松冲刺时被车挡)
-1. [华为切入支付市场有何目的](https://so.toutiao.com/search?keyword=华为切入支付市场有何目的)
 1. [武契奇：我感谢中国朋友的盛情好客](https://so.toutiao.com/search?keyword=武契奇：我感谢中国朋友的盛情好客)
 1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
 1. [乘坐雅万高铁旅客：好像坐在飞机上](https://so.toutiao.com/search?keyword=乘坐雅万高铁旅客：好像坐在飞机上)
-1. [哪吒汽车CEO：公司账上有100多亿元](https://so.toutiao.com/search?keyword=哪吒汽车CEO：公司账上有100多亿元)
 1. [我国全面取消制造业外资准入限制](https://so.toutiao.com/search?keyword=我国全面取消制造业外资准入限制)
 1. [约300名闯入美众议院的抗议者被捕](https://so.toutiao.com/search?keyword=约300名闯入美众议院的抗议者被捕)
 1. [跨栏比赛选手碰倒所有栏杆率先冲线](https://so.toutiao.com/search?keyword=跨栏比赛选手碰倒所有栏杆率先冲线)
@@ -49,14 +73,11 @@
 1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
 1. [驻加沙记者：数百个家庭返回北部](https://so.toutiao.com/search?keyword=驻加沙记者：数百个家庭返回北部)
 1. [日籍药企员工涉间谍罪在华被逮捕](https://so.toutiao.com/search?keyword=日籍药企员工涉间谍罪在华被逮捕)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
 1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
 1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
 1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
 1. [梅西晒合影祝福内马尔：给予你力量](https://so.toutiao.com/search?keyword=梅西晒合影祝福内马尔：给予你力量)
 1. [陕西省政协原主席韩勇被查](https://so.toutiao.com/search?keyword=陕西省政协原主席韩勇被查)
-1. [巴以冲突已致双方超5200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超5200人死亡)
-1. [14岁男孩凌晨口渴误喝百草枯](https://so.toutiao.com/search?keyword=14岁男孩凌晨口渴误喝百草枯)
 1. [官方回应宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=官方回应宝马与出租相撞侧翻起火)
 1. [外交部介绍中俄领导人会谈相关情况](https://so.toutiao.com/search?keyword=外交部介绍中俄领导人会谈相关情况)
 1. [媒体批加方妄称我战机拦截加侦察机](https://so.toutiao.com/search?keyword=媒体批加方妄称我战机拦截加侦察机)
@@ -66,7 +87,6 @@
 1. [贵州茅台成交额突破百亿元](https://so.toutiao.com/search?keyword=贵州茅台成交额突破百亿元)
 1. [神舟十六号航天员吃到自己种的菜了](https://so.toutiao.com/search?keyword=神舟十六号航天员吃到自己种的菜了)
 1. [网友画图解读广州出租撞宝马过程](https://so.toutiao.com/search?keyword=网友画图解读广州出租撞宝马过程)
-1. [36岁生物学家儿时常考倒数第一](https://so.toutiao.com/search?keyword=36岁生物学家儿时常考倒数第一)
 1. [智利总统逛潘家园跟店员讨价还价](https://so.toutiao.com/search?keyword=智利总统逛潘家园跟店员讨价还价)
 1. [神舟十七号近日择机发射](https://so.toutiao.com/search?keyword=神舟十七号近日择机发射)
 1. [巴以冲突已致双方超4900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4900人死亡)
@@ -102,7 +122,6 @@
 1. [沙特呼吁公民“立即”离开黎巴嫩](https://so.toutiao.com/search?keyword=沙特呼吁公民“立即”离开黎巴嫩)
 1. [萨拉赫呼吁对加沙援助](https://so.toutiao.com/search?keyword=萨拉赫呼吁对加沙援助)
 1. [拟IPO企业提前分红募资还贷引质疑](https://so.toutiao.com/search?keyword=拟IPO企业提前分红募资还贷引质疑)
-1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
 1. [媒体评社区中心不让群众借卫生间](https://so.toutiao.com/search?keyword=媒体评社区中心不让群众借卫生间)
 1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
 1. [中方赞赏埃及斡旋加沙人道主义局势](https://so.toutiao.com/search?keyword=中方赞赏埃及斡旋加沙人道主义局势)
@@ -123,7 +142,6 @@
 1. [台33%民众因韩国瑜辅选更挺侯友宜](https://so.toutiao.com/search?keyword=台33%民众因韩国瑜辅选更挺侯友宜)
 1. [男生帮女朋友吸伤口确诊三级暴露](https://so.toutiao.com/search?keyword=男生帮女朋友吸伤口确诊三级暴露)
 1. [台风三巴继续沿海南岛“描边”北上](https://so.toutiao.com/search?keyword=台风三巴继续沿海南岛“描边”北上)
-1. [北京等地拟取消教师编制？官方辟谣](https://so.toutiao.com/search?keyword=北京等地拟取消教师编制？官方辟谣)
 1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
 1. [媒体：治狗患的重点在于管住人](https://so.toutiao.com/search?keyword=媒体：治狗患的重点在于管住人)
 1. [“一带一路”发展学智库报告发布](https://so.toutiao.com/search?keyword=“一带一路”发展学智库报告发布)
