--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,38 +1,66 @@
 # 2023-10-20
 
-共 294 条
+共 310 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 18:00:49 GMT+0800 (China Standard Time) -->
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+<!-- 最后更新时间 Fri Oct 20 2023 19:00:38 GMT+0800 (China Standard Time) -->
 1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
-1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
-1. [罗大美遇害案嫌犯欲将其卖至缅甸](https://so.toutiao.com/search?keyword=罗大美遇害案嫌犯欲将其卖至缅甸)
-1. [律师称女童家属请求对黑狗安乐死](https://so.toutiao.com/search?keyword=律师称女童家属请求对黑狗安乐死)
-1. [酒店保安驱赶避雨儿童](https://so.toutiao.com/search?keyword=酒店保安驱赶避雨儿童)
-1. [美又炒中国核弹头数量 外交部驳斥](https://so.toutiao.com/search?keyword=美又炒中国核弹头数量+外交部驳斥)
 1. [青岛啤酒厂工人被曝在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒厂工人被曝在原料仓小便)
-1. [身份证会被手机消磁吗？真相来了](https://so.toutiao.com/search?keyword=身份证会被手机消磁吗？真相来了)
+1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [拜登发表全国讲话呼吁支持以乌两国](https://so.toutiao.com/search?keyword=拜登发表全国讲话呼吁支持以乌两国)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
 1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [朝鲜民众热烈送别俄外长拉夫罗夫](https://so.toutiao.com/search?keyword=朝鲜民众热烈送别俄外长拉夫罗夫)
+1. [身份证会被手机消磁吗？真相来了](https://so.toutiao.com/search?keyword=身份证会被手机消磁吗？真相来了)
+1. [女生住所旁挖到古墓秒变墓景房](https://so.toutiao.com/search?keyword=女生住所旁挖到古墓秒变墓景房)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
-1. [西方的干预会如何影响巴以局势发展](https://so.toutiao.com/search?keyword=西方的干预会如何影响巴以局势发展)
+1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
+1. [加沙幸存小女孩被吓到不会哭泣](https://so.toutiao.com/search?keyword=加沙幸存小女孩被吓到不会哭泣)
 1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
+1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
+1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
+1. [美一男子欲自杀与警察交谈后被打死](https://so.toutiao.com/search?keyword=美一男子欲自杀与警察交谈后被打死)
+1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+1. [拜登：不希望与俄罗斯作战](https://so.toutiao.com/search?keyword=拜登：不希望与俄罗斯作战)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [武汉三镇客场3-1送大连6轮不胜](https://so.toutiao.com/search?keyword=武汉三镇客场3-1送大连6轮不胜)
+1. [金鱼踩高跷了](https://so.toutiao.com/search?keyword=金鱼踩高跷了)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [马龙35岁生日发文：热爱没有天花板](https://so.toutiao.com/search?keyword=马龙35岁生日发文：热爱没有天花板)
+1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
+1. [萝卜刀爆火后“创始人”仍住出租屋](https://so.toutiao.com/search?keyword=萝卜刀爆火后“创始人”仍住出租屋)
+1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
+1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
+1. [俄发布摧毁乌军“星链”终端视频](https://so.toutiao.com/search?keyword=俄发布摧毁乌军“星链”终端视频)
+1. [CBA新赛季明晚在沈阳揭幕](https://so.toutiao.com/search?keyword=CBA新赛季明晚在沈阳揭幕)
+1. [人民网：囤积阿奇霉素？没必要](https://so.toutiao.com/search?keyword=人民网：囤积阿奇霉素？没必要)
+1. [专家：台湾人患巴以冲突心理创伤症](https://so.toutiao.com/search?keyword=专家：台湾人患巴以冲突心理创伤症)
+1. [警方称产后坠亡女子患抑郁症](https://so.toutiao.com/search?keyword=警方称产后坠亡女子患抑郁症)
+1. [辽宁一干部被撤职降级](https://so.toutiao.com/search?keyword=辽宁一干部被撤职降级)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
+1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
+1. [北向资金连续6日净卖出](https://so.toutiao.com/search?keyword=北向资金连续6日净卖出)
+1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
+1. [哈马斯称对以多地遭火箭弹袭击负责](https://so.toutiao.com/search?keyword=哈马斯称对以多地遭火箭弹袭击负责)
+1. [专家：当心玩萝卜刀的负面心理效应](https://so.toutiao.com/search?keyword=专家：当心玩萝卜刀的负面心理效应)
+1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
+1. [小孩被硬核拔牙 连哭的时间都没给](https://so.toutiao.com/search?keyword=小孩被硬核拔牙+连哭的时间都没给)
+1. [澳称不更改取消中企在达尔文港租约](https://so.toutiao.com/search?keyword=澳称不更改取消中企在达尔文港租约)
+1. [国足世预赛时间确定](https://so.toutiao.com/search?keyword=国足世预赛时间确定)
+1. [酒店保安驱赶避雨儿童](https://so.toutiao.com/search?keyword=酒店保安驱赶避雨儿童)
+1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [罗大美遇害案嫌犯欲将其卖至缅甸](https://so.toutiao.com/search?keyword=罗大美遇害案嫌犯欲将其卖至缅甸)
+1. [律师称女童家属请求对黑狗安乐死](https://so.toutiao.com/search?keyword=律师称女童家属请求对黑狗安乐死)
+1. [美又炒中国核弹头数量 外交部驳斥](https://so.toutiao.com/search?keyword=美又炒中国核弹头数量+外交部驳斥)
+1. [西方的干预会如何影响巴以局势发展](https://so.toutiao.com/search?keyword=西方的干预会如何影响巴以局势发展)
 1. [专家：中东武装组织已出现联动苗头](https://so.toutiao.com/search?keyword=专家：中东武装组织已出现联动苗头)
 1. [哈马斯称以军空袭加沙数十栋住宅楼](https://so.toutiao.com/search?keyword=哈马斯称以军空袭加沙数十栋住宅楼)
-1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
 1. [巴勒斯坦民众与以色列军警发生冲突](https://so.toutiao.com/search?keyword=巴勒斯坦民众与以色列军警发生冲突)
-1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
-1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
-1. [萝卜刀爆火后“创始人”仍住出租屋](https://so.toutiao.com/search?keyword=萝卜刀爆火后“创始人”仍住出租屋)
-1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
-1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
-1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
-1. [俄发布摧毁乌军“星链”终端视频](https://so.toutiao.com/search?keyword=俄发布摧毁乌军“星链”终端视频)
-1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
 1. [区长行贿50万3个月后任区委书记](https://so.toutiao.com/search?keyword=区长行贿50万3个月后任区委书记)
 1. [智利高人气总统钟情中国文化](https://so.toutiao.com/search?keyword=智利高人气总统钟情中国文化)
 1. [《志愿军：雄兵出击》票房破7亿](https://so.toutiao.com/search?keyword=《志愿军：雄兵出击》票房破7亿)
@@ -41,19 +69,11 @@
 1. [伊朗驻华大使馆展示加沙现状](https://so.toutiao.com/search?keyword=伊朗驻华大使馆展示加沙现状)
 1. [失联潜水员家属放弃打捞？官方回应](https://so.toutiao.com/search?keyword=失联潜水员家属放弃打捞？官方回应)
 1. [柯文哲：已与朱立伦侯友宜都见过面](https://so.toutiao.com/search?keyword=柯文哲：已与朱立伦侯友宜都见过面)
-1. [专家：台湾人患巴以冲突心理创伤症](https://so.toutiao.com/search?keyword=专家：台湾人患巴以冲突心理创伤症)
-1. [小孩被硬核拔牙 连哭的时间都没给](https://so.toutiao.com/search?keyword=小孩被硬核拔牙+连哭的时间都没给)
-1. [北向资金连续6日净卖出](https://so.toutiao.com/search?keyword=北向资金连续6日净卖出)
 1. [上交所原副总经理刘逖被开除公职](https://so.toutiao.com/search?keyword=上交所原副总经理刘逖被开除公职)
-1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
-1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
-1. [美一男子欲自杀与警察交谈后被打死](https://so.toutiao.com/search?keyword=美一男子欲自杀与警察交谈后被打死)
 1. [媒体：垄断拍照权只会给景区招黑](https://so.toutiao.com/search?keyword=媒体：垄断拍照权只会给景区招黑)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
 1. [中纪委国家监委：3人被查1人被处分](https://so.toutiao.com/search?keyword=中纪委国家监委：3人被查1人被处分)
 1. [李大霄谈沪指创年内新低的主要原因](https://so.toutiao.com/search?keyword=李大霄谈沪指创年内新低的主要原因)
 1. [王毅就发展中日关系提出五点建议](https://so.toutiao.com/search?keyword=王毅就发展中日关系提出五点建议)
-1. [人民网：囤积阿奇霉素？没必要](https://so.toutiao.com/search?keyword=人民网：囤积阿奇霉素？没必要)
 1. [网友画图解读广州出租撞宝马过程](https://so.toutiao.com/search?keyword=网友画图解读广州出租撞宝马过程)
 1. [普京访华携带的黑色手提箱备受关注](https://so.toutiao.com/search?keyword=普京访华携带的黑色手提箱备受关注)
 1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
@@ -105,7 +125,6 @@
 1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
 1. [男子在校门口遛大型犬不拴绳](https://so.toutiao.com/search?keyword=男子在校门口遛大型犬不拴绳)
 1. [加沙医院到底是谁炸的](https://so.toutiao.com/search?keyword=加沙医院到底是谁炸的)
-1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
 1. [一辆敞篷车在高速路上来回变道](https://so.toutiao.com/search?keyword=一辆敞篷车在高速路上来回变道)
 1. [加沙人：孩子被杀了美国满意了吗](https://so.toutiao.com/search?keyword=加沙人：孩子被杀了美国满意了吗)
 1. [官方优化石墨物项临时出口管制措施](https://so.toutiao.com/search?keyword=官方优化石墨物项临时出口管制措施)
@@ -133,12 +152,10 @@
 1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
 1. [商家回应儿童积木现不雅图案：赔2元](https://so.toutiao.com/search?keyword=商家回应儿童积木现不雅图案：赔2元)
 1. [专家谈沪指破3000点次数超50次](https://so.toutiao.com/search?keyword=专家谈沪指破3000点次数超50次)
-1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
 1. [绝食24天的李在明将恢复履职](https://so.toutiao.com/search?keyword=绝食24天的李在明将恢复履职)
 1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
 1. [媒体批美国对华“核讹诈”](https://so.toutiao.com/search?keyword=媒体批美国对华“核讹诈”)
 1. [进小区先穿过地瓜田？业主质疑宣传](https://so.toutiao.com/search?keyword=进小区先穿过地瓜田？业主质疑宣传)
-1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
 1. [三只羊沈阳分公司开业](https://so.toutiao.com/search?keyword=三只羊沈阳分公司开业)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
 1. [媒体：碧桂园求解境外债困局](https://so.toutiao.com/search?keyword=媒体：碧桂园求解境外债困局)
@@ -174,7 +191,6 @@
 1. [农业执法大队检查农机驾驶证引争议](https://so.toutiao.com/search?keyword=农业执法大队检查农机驾驶证引争议)
 1. [永乐桥见证创新高地在海河畔崛起](https://so.toutiao.com/search?keyword=永乐桥见证创新高地在海河畔崛起)
 1. [男子试驾电动车撞倒行人致十级伤残](https://so.toutiao.com/search?keyword=男子试驾电动车撞倒行人致十级伤残)
-1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
 1. [搜救队员：明月山遇难女子疑被困而死](https://so.toutiao.com/search?keyword=搜救队员：明月山遇难女子疑被困而死)
 1. [美国又向东地中海派遣一艘军舰](https://so.toutiao.com/search?keyword=美国又向东地中海派遣一艘军舰)
 1. [男生脚踹殴打女生 同学嘻哈围观](https://so.toutiao.com/search?keyword=男生脚踹殴打女生+同学嘻哈围观)
