--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,59 +1,77 @@
 # 2023-10-21
 
-共 197 条
+共 213 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 14:00:38 GMT+0800 (China Standard Time) -->
-1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
-1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
-1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
-1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
+<!-- 最后更新时间 Sat Oct 21 2023 15:00:44 GMT+0800 (China Standard Time) -->
 1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
+1. [南京胖哥：为离开的女儿好好活着](https://so.toutiao.com/search?keyword=南京胖哥：为离开的女儿好好活着)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
 1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
-1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
+1. [沈腾给谢楠表演了一个“吴京打采”](https://so.toutiao.com/search?keyword=沈腾给谢楠表演了一个“吴京打采”)
 1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
-1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
+1. [官方辟谣新疆和田地震后应急队伍出动](https://so.toutiao.com/search?keyword=官方辟谣新疆和田地震后应急队伍出动)
 1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
 1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
-1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
-1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
-1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
 1. [被哈马斯释放的两美国人质家属发声](https://so.toutiao.com/search?keyword=被哈马斯释放的两美国人质家属发声)
-1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
-1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
-1. [拜登称哈马斯袭击是为破坏沙以关系](https://so.toutiao.com/search?keyword=拜登称哈马斯袭击是为破坏沙以关系)
+1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
+1. [为何今年肺炎支原体感染明显增多](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染明显增多)
 1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [内蒙古乌兰浩特天空惊现鸟群盘旋](https://so.toutiao.com/search?keyword=内蒙古乌兰浩特天空惊现鸟群盘旋)
-1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
-1. [文班亚马19分5封盖 马刺送勇士首败](https://so.toutiao.com/search?keyword=文班亚马19分5封盖+马刺送勇士首败)
 1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
+1. [关于支原体肺炎的19个热点问题](https://so.toutiao.com/search?keyword=关于支原体肺炎的19个热点问题)
+1. [广西平果爆炸事故初步调查情况公布](https://so.toutiao.com/search?keyword=广西平果爆炸事故初步调查情况公布)
+1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
+1. [央媒：农田变深坑挖穿的是监管底线](https://so.toutiao.com/search?keyword=央媒：农田变深坑挖穿的是监管底线)
+1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
 1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
-1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [专家解读拜登讲话呼吁追加军援预算](https://so.toutiao.com/search?keyword=专家解读拜登讲话呼吁追加军援预算)
 1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [《王牌对王牌》唐嫣钟汉良再次搭档](https://so.toutiao.com/search?keyword=《王牌对王牌》唐嫣钟汉良再次搭档)
+1. [媒体：美敲打“台独”怕陷第三战场?](https://so.toutiao.com/search?keyword=媒体：美敲打“台独”怕陷第三战场?)
+1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
+1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [台风三巴影响广东部分河流出现洪水](https://so.toutiao.com/search?keyword=台风三巴影响广东部分河流出现洪水)
+1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
+1. [金正恩会见俄外长：热情微笑握手](https://so.toutiao.com/search?keyword=金正恩会见俄外长：热情微笑握手)
+1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+1. [郁亮：目前楼市如同马拉松撞墙阶段](https://so.toutiao.com/search?keyword=郁亮：目前楼市如同马拉松撞墙阶段)
+1. [内蒙古乌兰浩特天空惊现鸟群盘旋](https://so.toutiao.com/search?keyword=内蒙古乌兰浩特天空惊现鸟群盘旋)
+1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
+1. [涂磊再谈上海女童事件](https://so.toutiao.com/search?keyword=涂磊再谈上海女童事件)
+1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
+1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
+1. [媒体评情侣住酒店一年后收亲密视频](https://so.toutiao.com/search?keyword=媒体评情侣住酒店一年后收亲密视频)
+1. [可可西里的网红狼胖了](https://so.toutiao.com/search?keyword=可可西里的网红狼胖了)
+1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
+1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
+1. [女儿出门前弄流行发型爸爸不满](https://so.toutiao.com/search?keyword=女儿出门前弄流行发型爸爸不满)
+1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
+1. [中纪委公布4名“内鬼”被处理消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被处理消息)
+1. [媒体批西方借“人权”干涉中国内政](https://so.toutiao.com/search?keyword=媒体批西方借“人权”干涉中国内政)
+1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
+1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
+1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
+1. [拜登称哈马斯袭击是为破坏沙以关系](https://so.toutiao.com/search?keyword=拜登称哈马斯袭击是为破坏沙以关系)
+1. [文班亚马19分5封盖 马刺送勇士首败](https://so.toutiao.com/search?keyword=文班亚马19分5封盖+马刺送勇士首败)
 1. [网红山西四人行上《星光大道》了](https://so.toutiao.com/search?keyword=网红山西四人行上《星光大道》了)
 1. [电瓶车女孩被卷入环卫车车底遭碾压](https://so.toutiao.com/search?keyword=电瓶车女孩被卷入环卫车车底遭碾压)
-1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
 1. [四川坠江宝马打捞出水 6旬女性身亡](https://so.toutiao.com/search?keyword=四川坠江宝马打捞出水+6旬女性身亡)
 1. [男子玩拖拉机漂移“漂”进交警队](https://so.toutiao.com/search?keyword=男子玩拖拉机漂移“漂”进交警队)
 1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
 1. [美《中国军力报告》遭中方驳斥](https://so.toutiao.com/search?keyword=美《中国军力报告》遭中方驳斥)
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
-1. [媒体：美敲打“台独”怕陷第三战场?](https://so.toutiao.com/search?keyword=媒体：美敲打“台独”怕陷第三战场?)
 1. [布达佩斯站覃海洋100米蛙泳夺冠](https://so.toutiao.com/search?keyword=布达佩斯站覃海洋100米蛙泳夺冠)
 1. [刘元春：明年中国经济积极因素较多](https://so.toutiao.com/search?keyword=刘元春：明年中国经济积极因素较多)
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
 1. [神十七发射在即 此次发射有何看点](https://so.toutiao.com/search?keyword=神十七发射在即+此次发射有何看点)
 1. [萝卜刀爆火后“创始人”仍住出租屋](https://so.toutiao.com/search?keyword=萝卜刀爆火后“创始人”仍住出租屋)
-1. [为何今年肺炎支原体感染明显增多](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染明显增多)
-1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
-1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
-1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
 1. [韩国瑜：赖清德见过最多贪官](https://so.toutiao.com/search?keyword=韩国瑜：赖清德见过最多贪官)
-1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
 1. [台风“三巴”已移出雷州半岛](https://so.toutiao.com/search?keyword=台风“三巴”已移出雷州半岛)
 1. [日本经济强势复苏？博主解读](https://so.toutiao.com/search?keyword=日本经济强势复苏？博主解读)
-1. [可可西里的网红狼胖了](https://so.toutiao.com/search?keyword=可可西里的网红狼胖了)
 1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
 1. [海合会-东盟峰会在沙特首都举行](https://so.toutiao.com/search?keyword=海合会-东盟峰会在沙特首都举行)
 1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
@@ -80,7 +98,6 @@
 1. [老人差点被洪水冲走 几位大哥出手](https://so.toutiao.com/search?keyword=老人差点被洪水冲走+几位大哥出手)
 1. [巴勒斯坦与巴基斯坦讨论巴以局势](https://so.toutiao.com/search?keyword=巴勒斯坦与巴基斯坦讨论巴以局势)
 1. [暴力冲闯中领馆嫌犯被击毙视频公布](https://so.toutiao.com/search?keyword=暴力冲闯中领馆嫌犯被击毙视频公布)
-1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
 1. [美国加州州长将访华有何看点](https://so.toutiao.com/search?keyword=美国加州州长将访华有何看点)
 1. [媒体谈美方一边倒支持以色列遭抗议](https://so.toutiao.com/search?keyword=媒体谈美方一边倒支持以色列遭抗议)
 1. [俞敏洪李彦宏久违同框](https://so.toutiao.com/search?keyword=俞敏洪李彦宏久违同框)
@@ -146,7 +163,6 @@
 1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
 1. [以军称约1000吨武器已运抵以色列](https://so.toutiao.com/search?keyword=以军称约1000吨武器已运抵以色列)
 1. [河北唐山：盐碱地上金穗弯腰谷飘香](https://so.toutiao.com/search?keyword=河北唐山：盐碱地上金穗弯腰谷飘香)
-1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
 1. [狂犬病毒不只源于狂犬](https://so.toutiao.com/search?keyword=狂犬病毒不只源于狂犬)
 1. [法国酿酒商抗议进口西班牙葡萄酒](https://so.toutiao.com/search?keyword=法国酿酒商抗议进口西班牙葡萄酒)
 1. [7岁女孩天生2个子宫3个肾](https://so.toutiao.com/search?keyword=7岁女孩天生2个子宫3个肾)
